Commenting the files to explain work

--- a/nyc_dogs.ipynb
+++ b/nyc_dogs.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,24 +64,27 @@
     }
    ],
    "source": [
+    "# Making a variable to show the 5 most common dogs by boro_name and adds a count fuction to count the total\n",
     "top_dog = dogs_grouped.groupby('boro_name').apply(lambda x: x.nlargest(5, 'count')).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merging two files together on boro_name. Connecting them on an inner join.\n",
     "boro_dog = gdf.merge(top_dog, on='boro_name', how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Merging two files together on boro_name. Connecting them on an inner join.\n",
     "df_inner = pd.merge(dogs, income, on='boro_name', how='inner')"
    ]
   },
@@ -473,16 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using dataframe to only show Brooklyn part of the CSV\n",
     "source_data = df_inner[df_inner['boro_name'] == 'Brooklyn']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -559,6 +563,7 @@
     }
    ],
    "source": [
+    "# Printing the results\n",
     "print(source_data)"
    ]
   },
